<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <ImageView
        android:id="@+id/img_movie"
        android:layout_width="@dimen/img_result_width"
        android:layout_height="@dimen/img_result_height"
        android:layout_marginTop="@dimen/margin_medium"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="@dimen/margin_large"
        android:contentDescription="@string/img_trailer"
        tools:background="@color/yellow_400"/>

    <TextView
        android:id="@+id/label_genre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/img_movie"
        app:layout_constraintStart_toEndOf="@id/img_movie"
        android:layout_marginStart="@dimen/margin_medium"
        style="@style/Widget.TextView.Ship"
        tools:text="Drama"/>

    <ImageView
        android:id="@+id/icon_star"
        android:layout_width="@dimen/icon_micro_size"
        android:layout_height="@dimen/icon_micro_size"
        android:layout_marginStart="@dimen/padding_medium"
        android:contentDescription="@string/img_star"
        android:src="@drawable/ic_rounded_star"
        app:layout_constraintBottom_toBottomOf="@id/label_genre"
        app:layout_constraintStart_toEndOf="@id/label_genre"
        app:layout_constraintTop_toTopOf="@id/label_genre"
        tools:ignore="ImageContrastCheck"/>

    <TextView
        android:id="@+id/label_stars"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_micro"
        android:textAppearance="@style/TextAppearance.Trailerx.Body.SmallLight"
        app:layout_constraintStart_toEndOf="@id/icon_star"
        app:layout_constraintTop_toTopOf="@id/icon_star"
        tools:ignore="TextContrastCheck"
        tools:text="5.0" />

    <TextView
        android:id="@+id/text_box_synopsis"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/img_movie"
        app:layout_constraintTop_toBottomOf="@id/label_genre"
        android:layout_marginStart="@dimen/margin_medium"
        android:layout_marginTop="@dimen/margin_medium"
        android:layout_marginEnd="@dimen/margin_medium"
        android:layout_marginBottom="@dimen/margin_medium"
        android:ellipsize="end"
        android:maxLines="10"
        android:textAppearance="@style/TextAppearance.Trailerx.Body"
        tools:text="@string/synopsis"
        tools:ignore="VisualLintLongText" />

</androidx.constraintlayout.widget.ConstraintLayout>