<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/refreshLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.MovieFragment"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="?android:attr/colorBackgroundFloating">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/container_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/app_bar_height"
            android:title="@string/settings"
            style="@style/Widget.Trailerx.Toolbar"
            />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/container_app_bar"
        app:layout_constraintBottom_toBottomOf="parent"
        >

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintWidth_max="@dimen/button_max_width"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.Trailerx.Button.Primary"
            android:text="@string/logout"
            android:enabled="true"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_delete_account"
            android:layout_width="0dp"
            android:layout_height="@dimen/button_height"
            app:layout_constraintWidth_max="@dimen/button_max_width"
            app:layout_constraintTop_toBottomOf="@id/btn_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:textAppearance="@style/TextAppearance.Trailerx.Button.Primary"
            android:text="@string/delete_account"
            android:enabled="true"
            android:backgroundTint="@color/deep_orange_900"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/progress_component"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintTop_toTopOf="parent"
        android:background="?android:attr/colorBackgroundFloating"
        android:visibility="gone"
        tools:visibility="visible">
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="@dimen/progress_size"
            android:layout_height="@dimen/progress_size"
            style="@style/Widget.Trailerx.ProgressBar"/>
    </FrameLayout>

</androidx.constraintlayout.widget.ConstraintLayout>